PODSUMOWANIE 32